--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -1,7 +1,5 @@
-body{
-
-background-color:#00F;
-font-weight:bold;
-color:#F00;
-
+body {
+  background-color: #00f;
+  font-weight: bold;
+  color: #f00;
 }
